# Job-Tracker-API

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  auth.py  check_db.py  compose.yaml  crud.py  database.py  main.py  models.py  pyproject.toml  schemas.py
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 512495731ab7_add_refresh_tokens_back.py  529a02938e9f_initial.py  8e3e20920238_init.py  93bf99040b59_rename_tasks_to_applications.py  9f1cb0fad52a_add_refresh_tokens.py  e2913db28cfc_initial_migration.py
api/: deps.py  exceptions.py
api/routers/: application.py  auth.py  health.py  task.py  user.py
core/: config.py  exceptions.py  security.py
db/: session.py
models/: __init__.py  application.py  refresh_token.py  task.py  user.py
repositories/: application_repo.py  task_repo.py  token_repo.py  user_repo.py
routes/: tasks.py  users.py
schemas/: application.py  auth.py  error.py  task.py  user.py
services/: application_service.py  auth_service.py  task_service.py  user_service.py
tests/: conftest.py  test_applications.py  test_auth.py  test_health.py  test_tasks.py  test_users.py
